--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.1.3",
     "concurrently": "^4.0.1",
     "json-server": "^0.14.0",
+    "jwt-decode": "^4.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.0",
